k8s/ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: grafana-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
  ingressClassName: nginx
