k8s/ingress/influxdb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: influxdb-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /influxdb(/|$)(.*)
            backend:
              service:
                name: influxdb-service
                port:
                  number: 8086
  ingressClassName: nginx
