k8s/ingress/ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service-2
  namespace: app
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/app-root: /app1
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: ingress-service-2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
          # - pathType: ImplementationSpecific
          #   path: /influxdb(/|$)(.*)
          #   backend:
          #     service:
          #       name: influxdb-service
          #       port:
          #         number: 8086

  ingressClassName: nginx
