k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: ingress-service
spec:
  rules:
    # - host: myapp.info
    - http:
        paths:
          - pathType: Prefix
            path: ""
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
          # - pathType: Prefix
          #   path: "/api/users/?(.*)"
          #   backend:
          #     service:
          #       name: influxdb-service
          #       port:
          #         number: 3000
  # ingressClassName: nginx
